--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "express": "^4.16.4",
+    "mongodb": "^3.1.13",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
