--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node src/server.js"
+    "server": "nodemon src/server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "nodemon": "^1.18.10",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
