--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "server": "nodemon src/back/server.js"
+    "server": "nodemon src/back/server.js",
+    "deploy-backend": "git subtree push --prefix backend heroku master"
   },
   "eslintConfig": {
     "extends": "react-app"
