Add obligatory semicolon to ESLint config

--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "deploy-backend": "git subtree push --prefix src/backend heroku master"
   },
   "eslintConfig": {
+    "rules": {
+      "semi": "error"
+    },
     "extends": "react-app"
   },
   "browserslist": [
