--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "@babel/core": "7.2.2",
+    "@babel/runtime": "^7.4.0",
     "@svgr/webpack": "4.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
